update application time, notification, save jobs add 2 collumn note and tag
